weblog page and work samples overflow fixed

--- a/assets/custom/css/Style.css
+++ b/assets/custom/css/Style.css
@@ -25,6 +25,7 @@
 	text-decoration: none !important;
 	list-style: none;
 	transition: all 0.3s;
+	text-shadow: 0 0.3rem 0.3rem rgba(0, 0, 0, 0.15) !important;
 }
 
 body {
@@ -33,16 +34,36 @@ body {
 	width: 100% !important;
 }
 
+button {
+	cursor: pointer;
+}
+
+input::placeholder {
+	color: #e3e3e3 !important;
+}
+
+textarea::placeholder {
+	color: #e3e3e3 !important;
+}
+
+footer {
+	box-shadow: 0 -0.1rem 1rem rgba(0, 0, 0, 0.15) !important;
+}
+
+.fa,
+.fas,
+.fab,
+.fal,
+::placeholder {
+	text-shadow: none !important;
+}
+
 .border-none {
 	border: none;
 }
 
 .nowrap {
 	white-space: nowrap;
-}
-
-button {
-	cursor: pointer;
 }
 
 .space-100 {
@@ -65,18 +86,6 @@ button {
 
 .btn {
 	padding: 10px 20px !important;
-}
-
-/*
-.breadcrumb-item::before{
-	content: " > " !important;
-}*/
-input::placeholder {
-	color: #e3e3e3 !important;
-}
-
-textarea::placeholder {
-	color: #e3e3e3 !important;
 }
 
 .border-right-purple {
@@ -119,6 +128,5 @@ textarea::placeholder {
 	width: 100%;
 	height: 100%;
 }
-
 
 /*----------end custom style part----------*/
